--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Hello World!</title>
+    <script src="//localhost:35729/livereload.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
