--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <title>Hello World!</title>
+    <link rel="stylesheet" type="text/css" href="style/main.css">
+    <link rel="stylesheet" type="text/css" href="style/semantic.min.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Hello World!<i class="star icon"></i></h1>
     We are using io.js <script>document.write(process.version)</script>
     and Electron <script>document.write(process.versions['electron'])</script>.
+    <button class="ui button">testtestest</button><i class="grid layout icon"></i>
   </body>
 </html>
