--- a/index.html
+++ b/index.html
@@ -6,9 +6,29 @@
     <link rel="stylesheet" type="text/css" href="style/semantic.min.css">
   </head>
   <body>
-    <h1>Hello World!<i class="star icon"></i></h1>
-    We are using io.js <script>document.write(process.version)</script>
-    and Electron <script>document.write(process.versions['electron'])</script>.
-    <button class="ui button">testtestest</button><i class="grid layout icon"></i>
+    <div class="ui grid">
+      <div class="sixteen wide column">
+        <i class="ui middle aligned huge star icon"></i>
+        <div class="ui red buttons">
+          <button class="ui button">Overview</button>
+          <button class="ui button">Something</button>
+          <button class="ui button">Something</button>
+        </div>
+        <div class="ui red buttons">
+          <button class="ui button">Something</button>
+          <button class="ui button">Something</button>
+        </div>
+        <p>tekst</p>
+      </div>
+      <div class="four wide yellow column">
+        <p>b</p>
+      </div>
+      <div class="eight wide green column">
+        <p>c</p>
+      </div>
+      <div class="four wide yellow column">
+        <p>b</p>
+      </div>
+    </div>
   </body>
 </html>
