Vue setup working

--- a/index.html
+++ b/index.html
@@ -2,23 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Appy Creator</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-    <div id="demo" class="">
-      <input type="text" v-model="name">
-
-      <pre>{{ $data | json }}</pre>
-    </div>
-
   <body>
-    <h1>Hello, world!</h1>
-    <button class="btn btn-primary">Blij?</button>
-    <button type="button" class="btn btn-danger btn-xs">Tssss</button>
+    <div id="app"></div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/0.12.8/vue.js"></script>
-    <script type="text/javascript" src="src/view.js"></script>
+    <script type="text/javascript" src="src/renderer/build.js"></script>
   </body>
 </html>
