Reorganise components and views

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Appy Creator</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="style/main.css">
   <body>
     <div id="app"></div>
 
