Seperate properties components

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Appy Creator</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
     <!-- <link rel="stylesheet" href="style/main.css"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <body>
     <div id="app"></div>
 
