--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Appy Creator</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css" media="screen,projection"> -->
     <!-- <link rel="stylesheet" href="style/main.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <body>
     <div id="app"></div>
 
+    <!-- <script>
+      window.$ = window.jQuery = require('../lib/jquery-2.1.4.min.js');
+    </script> -->
     <script type="text/javascript" src="src/renderer/build.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script> -->
   </body>
