Add support for mutliple entry point scripts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- <script>
       window.$ = window.jQuery = require('../lib/jquery-2.1.4.min.js');
     </script> -->
-    <script type="text/javascript" src="src/renderer/build.js"></script>
+    <script type="text/javascript" src="src/main.entry.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script> -->
   </body>
 </html>
