Rework complete build system (again)
There are still some bugs because of the transition.

--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Appy Creator</title>
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css" media="screen,projection"> -->
-    <!-- <link rel="stylesheet" href="style/main.css"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <body>
-    <div id="app"></div>
+    <title>test-proj</title>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
 
-    <!-- <script>
-      window.$ = window.jQuery = require('../lib/jquery-2.1.4.min.js');
-    </script> -->
-    <script type="text/javascript" src="src/main.entry.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script> -->
+  </head>
+  <body>
+    <app></app>
+    <script src="static/app.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
   </body>
 </html>
