--- a/src/export/app.html
+++ b/src/export/app.html
@@ -35,11 +35,14 @@
               v-show="component_3.properties.visibility.value">
         </input>
       </div>
+      <!-- End generated textfield 2 code -->
+
+      <!-- Generated label code -->
       <div class="label"
         v-text="component_4.properties.name.value"
         v-show="component_4.properties.visibility.value">
       </div>
-      <!-- End generated textfield 2 code -->
+      <!-- End generated label code -->
     </app>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.16/vue.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
