--- a/src/export/app.html
+++ b/src/export/app.html
@@ -47,7 +47,31 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
     <script src="classes.js"></script>
     <script src="components.js"></script>
-    <script src="app.js"></script>
+    <script>// var Button = Vue.extend(ButtonOptions)
+    // Vue.component('cmp-button', Button)
+
+    Vue.config.debug = true
+
+    var vm = new Vue({
+      el: 'app',
+      data: {
+        component_1: new ButtonClass(),
+        component_2: new TextboxClass(),
+        component_3: new TextboxClass(),
+        component_4: new LabelClass(),
+      },
+      computed: {
+        computed_1: function() {
+          return this.component_2.properties.name.value + " and " + this.component_3.properties.name.value
+        }
+      },
+      methods: {
+        method_1: function() {
+          this.component_4.properties.name.value = this.computed_1
+        }
+      },
+    })
+</script>
 
   </body>
 </html>
