--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             You can position and resize the elements to make your app look unique. You can change some of
             the properties of the components as well, like the text on the button or the default text in the texboxes.
           </p>
-          <b>GIF?</b>
+          <img class="responsive-img wide" src="img/editor/design.gif">
           <p>
             Now that we have all the components in place we can apply some logic to them.
           </p>
@@ -64,13 +64,13 @@
             Now we start by looking through the functions on the left. Click on the <b>Plus</b> block and you will see
             a logic block appear in the middle of the screen. This is the central logic block for our app.
           </p>
-          <img class="responsive-img" src="https://i.gyazo.com/5a83dc69ddf925eeb9571edab85ab737.gif">
+          <img class="responsive-img wide" src="https://i.gyazo.com/5a83dc69ddf925eeb9571edab85ab737.gif">
           <p>
             We can see it needs some inputs, an output and an action. The inputs are the textboxes, so we find both our
             textboxes in the bar on the left and add them to the logic screen by clicking on them. Now we can connect
             the <b>text</b> output of the texboxes to the <b>left</b> and <b>right</b> inputs of the Plus block.
           </p>
-          <img class="responsive-img" src="https://i.gyazo.com/45203ec1eb1c852b3632e330db40f408.gif">
+          <img class="responsive-img wide" src="https://i.gyazo.com/45203ec1eb1c852b3632e330db40f408.gif">
           <p>
             Next up is the output. We add the label to the logic screen and connect the output of the Plus block to
             the <b>text</b> input of the label.
@@ -88,26 +88,23 @@
         <h3>Design</h3>
         <div class="divider"></div>
         <div class="section">
-          <img class="responsive-img" src="img/editor/editor.png">
+          <img class="responsive-img wide" src="img/editor/editor.png">
           <p>
             The editor is used to create the visual part of your application.
             On your left you have a list of components. With these components you create the application that you want.
             When you click on a component, the component will be visible on the smartphone panel in the middle.
           </p>
-
           <p>
             When a component is selected on the smartphone panel, you can move it around by just dragging it to where you want.
             You can also resize the component if you want to. You do this by putting your cursor in the right bottom corner of the component.
             Then you just drag to the size you want.
-            <img class="responsive-img" src="https://i.gyazo.com/8daf9cc2e7ea96eb98b70829b8393aed.gif">
           </p>
-
+          <img class="responsive-img wide" src="https://i.gyazo.com/8daf9cc2e7ea96eb98b70829b8393aed.gif">
           <p>
             On the right side of the editor you have the properties section. Here you can edit the properties of the components on the smartphone panel individually.
             More info about the components and their properties can be found in the <a href="#components">components</a> section.
             In this section you can also delete a component by clicking on the <kbd>DELETE</kbd> button at the bottom of the panel.
           </p>
-
           <img class="responsive-img" src="img/editor/tabs.png">
           <p>On the top bar of the editor you have a few tabs. We are now in the Design tab.
             When you're done with your design you can choose to add some logic to your app by going to the Logic tab.
@@ -221,8 +218,9 @@
 
           <br />
           <h5>List</h5>
-          <img style="width: 150px; float: right;" class="responsive-img" src="img/list/props.png">
-          <p>A list component is a collection of different components.
+          <img style="width: 200px; float: right;" class="responsive-img" src="img/list/props.png">
+          <p>
+            A list component is a collection of different components.
             The components of a list are created from a component template.
             This template can be created by clicking on <b>Edit items</b> in the properties of the list.
             In this template you insert the components each list element should have.
@@ -250,7 +248,7 @@
       <div id="logic" class="section scrollspy">
         <h3>Logic</h3>
         <div class="divider"></div>
-        <img class="responsive-img" src="img/logic/logic.png">
+        <img class="responsive-img wide" src="img/logic/logic.png">
         <p>
           The logic view is the view where you create the logic of your application.
           This is an important process because it makes your app do the things you want!
@@ -288,7 +286,7 @@
           <div class="col s12">
             <h5>Plus</h5>
             <div class="divider"></div>
-            <img class="responsive-img" src="img/logic/plus.png">
+            <img class="responsive-img logic-block" src="img/logic/plus.png">
             <p>A Plus block adds 2 things together into one output. Like the text of two textboxes.</p>
             <table class="bordered">
               <thead>
@@ -338,7 +336,7 @@
           <div class="col s12">
             <h5>AddListItem</h5>
             <div class="divider"></div>
-            <img class="responsive-img" src="img/logic/addItemList.png">
+            <img class="responsive-img logic-block" src="img/logic/addItemList.png">
             <p>
               When activated, the AddListItem block adds a new item to the list it belongs to.
               It doesn't have a fixed set of inputs like the Plus, rather the inputs
@@ -357,7 +355,7 @@
           <div class="col s12">
             <h5>RemoveListItem</h5>
             <div class="divider"></div>
-            <img class="responsive-img" src="img/logic/deleteListItem.png">
+            <img class="responsive-img logic-block" src="img/logic/deleteListItem.png">
             <p>
               When activated, the RemoveListItem block removes an item from the list it belongs to.
               For now, you can only remove items from lists by clicking on a button on that item.
