--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             two textboxes for the user to fill in the text, one button and a label to show the resulting text.
             We add these components by clicking on them in de components bar on the left.
             You can position and resize the elements to make your app look unique. You can change some of
-            the properties of the components as well, like the text on the button or the default text in the texboxes.
+            the properties of the components as well, like the text on the button or the default text in the textboxes.
           </p>
           <img class="responsive-img wide" src="img/editor/design.gif">
           <p>
@@ -68,7 +68,7 @@
           <p>
             We can see it needs some inputs, an output and an action. The inputs are the textboxes, so we find both our
             textboxes in the bar on the left and add them to the logic screen by clicking on them. Now we can connect
-            the <b>text</b> output of the texboxes to the <b>left</b> and <b>right</b> inputs of the Plus block.
+            the <b>text</b> output of the textboxes to the <b>left</b> and <b>right</b> inputs of the Plus block.
           </p>
           <img class="responsive-img wide" src="https://i.gyazo.com/45203ec1eb1c852b3632e330db40f408.gif">
           <p>
