--- a/index.html
+++ b/index.html
@@ -56,16 +56,18 @@
             You can position and resize the elements to make your app look unique. You can change some of
             the properties of the components as well, like the text on the button or the default text in the textboxes.
           </p>
-          <img class="responsive-img wide" src="img/editor/design.gif">
+          <img class="responsive-img wide" data-gifffer="img/editor/design.gif">
           <p>
             Now that we have all the components in place we can apply some logic to them.
           </p>
           <h5>Logic</h5>
           <p>
+            To go to the logic page, click on the logic tab in the header bar (see gif right under this text).
             Now we start by looking through the functions on the left. Click on the <b>Plus</b> block and you will see
             a logic block appear in the middle of the screen. This is the central logic block for our app.
           </p>
-          <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/5a83dc69ddf925eeb9571edab85ab737.gif">
+          <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/4eb40535f280f7346379ef5422a92847.gif">
+          (Click on the image to play the gif or to stop the gif!)
           <p>
             We can see it needs some inputs, an output and an action. The inputs are the textboxes, so we find both our
             textboxes in the bar on the left and add them to the logic screen by clicking on them. Now we can connect
