updated outdated gifs & pictures

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <h3>Design</h3>
         <div class="divider"></div>
         <div class="section">
-          <img class="responsive-img wide" data-gifffer="img/editor/editor.png">
+          <img class="responsive-img wide" src="img/editor/editor.png">
           <p>
             The editor is used to create the visual part of your application.
             On your left you have a list of components. With these components you create the application that you want.
@@ -102,7 +102,7 @@
             You can also resize the component if you want to. You do this by putting your cursor in the right bottom corner of the component.
             Then you just drag to the size you want.
           </p>
-          <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/8daf9cc2e7ea96eb98b70829b8393aed.gif">
+          <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/b605a02fe2affee9c16c4de872b795cc.gif">
           <p>
             On the right side of the editor you have the properties section. Here you can edit the properties of the components on the smartphone panel individually.
             More info about the components and their properties can be found in the <a href="#components">components</a> section.
