updated some more gifs & added missings steps

--- a/index.html
+++ b/index.html
@@ -73,17 +73,24 @@
             textboxes in the bar on the left and add them to the logic screen by clicking on them. Now we can connect
             the <b>text</b> output of the textboxes to the <b>left</b> and <b>right</b> inputs of the Plus block.
           </p>
-          <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/45203ec1eb1c852b3632e330db40f408.gif">
+          <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/c17d26eda46cdfd4e338d5a051245998.gif">
           <p>
             Next up is the output. We add the label to the logic screen and connect the output of the Plus block to
             the <b>text</b> input of the label.
           </p>
+          <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/274fe3eddcbea4603235a00e73a4b517.gif">
           <p>
             Finally we need a way to activate the Plus block. Let's add our last component, the button, to the logic screen
             and connect it with the <b>action</b> input of the Plus block. On the connection you will see
             a dropdown selection for the action that will activate the block. For now we need the click so you can leave it
             like that. That's it! All we need to do now is click the Upload button in the top right corner, scan the qr code with
             the Appy Center app and see our brand new app in action.
+          </p>
+          <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/0cf4716d49461a0746c041839bf3526a.gif">
+          <p>
+            Now it's time to see our app in action after we've uploaded it to the server and downloaded it to our smartphone!
+            Your app should do something like this:
+            <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/bda43d0f4a9b42e73c24d25351571814.gif" data-gifffer-width="208" data-gifffer-height="372">
           </p>
         </div>
       </div>
