--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             You can position and resize the elements to make your app look unique. You can change some of
             the properties of the components as well, like the text on the button or the default text in the textboxes.
           </p>
-          <img class="responsive-img wide" data-gifffer="img/editor/design.gif">
+          <img class="responsive-img wide z-depth-2" data-gifffer="img/editor/design.gif">
           <p>
             Now that we have all the components in place we can apply some logic to them.
           </p>
@@ -66,19 +66,19 @@
             Now we start by looking through the functions on the left. Click on the <b>Plus</b> block and you will see
             a logic block appear in the middle of the screen. This is the central logic block for our app.
           </p>
-          <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/4eb40535f280f7346379ef5422a92847.gif">
+          <img class="responsive-img wide z-depth-2" data-gifffer="https://i.gyazo.com/4eb40535f280f7346379ef5422a92847.gif">
           (Click on the image to play the gif or to stop the gif!)
           <p>
             We can see it needs some inputs, an output and an action. The inputs are the textboxes, so we find both our
             textboxes in the bar on the left and add them to the logic screen by clicking on them. Now we can connect
             the <b>text</b> output of the textboxes to the <b>left</b> and <b>right</b> inputs of the Plus block.
           </p>
-          <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/c17d26eda46cdfd4e338d5a051245998.gif">
+          <img class="responsive-img wide z-depth-2" data-gifffer="https://i.gyazo.com/c17d26eda46cdfd4e338d5a051245998.gif">
           <p>
             Next up is the output. We add the label to the logic screen and connect the output of the Plus block to
             the <b>text</b> input of the label.
           </p>
-          <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/274fe3eddcbea4603235a00e73a4b517.gif">
+          <img class="responsive-img wide z-depth-2" data-gifffer="https://i.gyazo.com/274fe3eddcbea4603235a00e73a4b517.gif">
           <p>
             Finally we need a way to activate the Plus block. Let's add our last component, the button, to the logic screen
             and connect it with the <b>action</b> input of the Plus block. On the connection you will see
@@ -86,19 +86,19 @@
             like that. That's it! All we need to do now is click the Upload button in the top right corner, scan the qr code with
             the Appy Center app and see our brand new app in action.
           </p>
-          <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/0cf4716d49461a0746c041839bf3526a.gif">
+          <img class="responsive-img wide z-depth-2" data-gifffer="https://i.gyazo.com/0cf4716d49461a0746c041839bf3526a.gif">
           <p>
             Now it's time to see our app in action after we've uploaded it to the server and downloaded it to our smartphone!
             Your app should do something like this:
-            <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/bda43d0f4a9b42e73c24d25351571814.gif" data-gifffer-width="208" data-gifffer-height="372">
           </p>
+          <img class="responsive-img wide z-depth-2" data-gifffer="https://i.gyazo.com/bda43d0f4a9b42e73c24d25351571814.gif" data-gifffer-width="208" data-gifffer-height="372">
         </div>
       </div>
       <div id="design" class="section scrollspy">
         <h3>Design</h3>
         <div class="divider"></div>
         <div class="section">
-          <img class="responsive-img wide" src="img/editor/editor.png">
+          <img class="responsive-img wide z-depth-2" src="img/editor/editor.png">
           <p>
             The editor is used to create the visual part of your application.
             On your left you have a list of components. With these components you create the application that you want.
@@ -109,13 +109,13 @@
             You can also resize the component if you want to. You do this by putting your cursor in the right bottom corner of the component.
             Then you just drag to the size you want.
           </p>
-          <img class="responsive-img wide" data-gifffer="https://i.gyazo.com/b605a02fe2affee9c16c4de872b795cc.gif">
+          <img class="responsive-img wide z-depth-2" data-gifffer="https://i.gyazo.com/b605a02fe2affee9c16c4de872b795cc.gif">
           <p>
             On the right side of the editor you have the properties section. Here you can edit the properties of the components on the smartphone panel individually.
             More info about the components and their properties can be found in the <a href="#components">components</a> section.
             In this section you can also delete a component by clicking on the <kbd>DELETE</kbd> button at the bottom of the panel.
           </p>
-          <img class="responsive-img" src="img/editor/tabs.png">
+          <img class="responsive-img z-depth-2" src="img/editor/tabs.png">
           <p>On the top bar of the editor you have a few tabs. We are now in the Design tab.
             When you're done with your design you can choose to add some logic to your app by going to the Logic tab.
             More info about the logic tab can be found in the <a href="#logic">logic</a> section.
@@ -228,7 +228,7 @@
 
           <br />
           <h5>List</h5>
-          <img style="width: 200px; float: right;" class="responsive-img" src="img/list/props.png">
+          <img style="width: 200px; float: right;" class="responsive-img z-depth-2" src="img/list/props.png">
           <p>
             A list component is a collection of different components.
             The components of a list are created from a component template.
@@ -258,7 +258,7 @@
       <div id="logic" class="section scrollspy">
         <h3>Logic</h3>
         <div class="divider"></div>
-        <img class="responsive-img wide" src="img/logic/logic.png">
+        <img class="responsive-img wide z-depth-2" src="img/logic/logic.png">
         <p>
           The logic view is the view where you create the logic of your application.
           This is an important process because it makes your app do the things you want!
@@ -296,7 +296,7 @@
           <div class="col s12">
             <h5>Plus</h5>
             <div class="divider"></div>
-            <img class="responsive-img logic-block" src="img/logic/plus.png">
+            <img class="responsive-img logic-block z-depth-2" src="img/logic/plus.png">
             <p>A Plus block adds 2 things together into one output. Like the text of two textboxes.</p>
             <table class="bordered">
               <thead>
@@ -346,7 +346,7 @@
           <div class="col s12">
             <h5>AddListItem</h5>
             <div class="divider"></div>
-            <img class="responsive-img logic-block" src="img/logic/addItemList.png">
+            <img class="responsive-img logic-block z-depth-2" src="img/logic/addItemList.png">
             <p>
               When activated, the AddListItem block adds a new item to the list it belongs to.
               It doesn't have a fixed set of inputs like the Plus, rather the inputs
@@ -365,7 +365,7 @@
           <div class="col s12">
             <h5>RemoveListItem</h5>
             <div class="divider"></div>
-            <img class="responsive-img logic-block" src="img/logic/deleteListItem.png">
+            <img class="responsive-img logic-block z-depth-2" src="img/logic/deleteListItem.png">
             <p>
               When activated, the RemoveListItem block removes an item from the list it belongs to.
               For now, you can only remove items from lists by clicking on a button on that item.
