--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       <div id="logic" class="section scrollspy">
         <h3>Logic</h3>
         <div class="divider"></div>
-        <img class="responsive-img wide z-depth-2" src="img/logic/logic.png">
+        <p><img class="responsive-img wide z-depth-2" src="img/logic/logic.png"></p>
         <p>
           The logic view is the view where you create the logic of your application.
           This is an important process because it makes your app do the things you want!
@@ -296,7 +296,7 @@
           <div class="col s12">
             <h5>Plus</h5>
             <div class="divider"></div>
-            <img class="responsive-img logic-block z-depth-2" src="img/logic/plus.png">
+            <p><img class="responsive-img logic-block z-depth-2" src="img/logic/plus.png"></p>
             <p>A Plus block adds 2 things together into one output. Like the text of two textboxes.</p>
             <table class="bordered">
               <thead>
@@ -346,7 +346,7 @@
           <div class="col s12">
             <h5>AddListItem</h5>
             <div class="divider"></div>
-            <img class="responsive-img logic-block z-depth-2" src="img/logic/addItemList.png">
+            <p><img class="responsive-img logic-block z-depth-2" src="img/logic/addItemList.png"></p>
             <p>
               When activated, the AddListItem block adds a new item to the list it belongs to.
               It doesn't have a fixed set of inputs like the Plus, rather the inputs
@@ -365,7 +365,7 @@
           <div class="col s12">
             <h5>RemoveListItem</h5>
             <div class="divider"></div>
-            <img class="responsive-img logic-block z-depth-2" src="img/logic/deleteListItem.png">
+            <p><img class="responsive-img logic-block z-depth-2" src="img/logic/deleteListItem.png"></p>
             <p>
               When activated, the RemoveListItem block removes an item from the list it belongs to.
               For now, you can only remove items from lists by clicking on a button on that item.
