Finish updating gifs

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             You can position and resize the elements to make your app look unique. You can change some of
             the properties of the components as well, like the text on the button or the default text in the textboxes.
           </p>
+          <p><i>Note: You can click on the images in the tutorial to start the animation. Click again to stop them.</i></p>
           <img class="responsive-img wide z-depth-2" data-gifffer="img/editor/design.gif">
           <p>
             Now that we have all the components in place we can apply some logic to them.
@@ -67,7 +68,6 @@
             a logic block appear in the middle of the screen. This is the central logic block for our app.
           </p>
           <img class="responsive-img wide z-depth-2" data-gifffer="https://i.gyazo.com/4eb40535f280f7346379ef5422a92847.gif">
-          (Click on the image to play the gif or to stop the gif!)
           <p>
             We can see it needs some inputs, an output and an action. The inputs are the textboxes, so we find both our
             textboxes in the bar on the left and add them to the logic screen by clicking on them. Now we can connect
@@ -91,7 +91,7 @@
             Now it's time to see our app in action after we've uploaded it to the server and downloaded it to our smartphone!
             Your app should do something like this:
           </p>
-          <img class="responsive-img wide z-depth-2" data-gifffer="https://i.gyazo.com/bda43d0f4a9b42e73c24d25351571814.gif" data-gifffer-width="208" data-gifffer-height="372">
+          <img class="responsive-img z-depth-2 result" data-gifffer="img/result.gif">
         </div>
       </div>
       <div id="design" class="section scrollspy">
@@ -275,7 +275,7 @@
         </p>
         <div class="card-panel teal">
           <p class="white-text">
-            <i>Note:</i> When you add a List component to the logic screen, instead of adding a single block like for the other components,
+            Note: When you add a List component to the logic screen, instead of adding a single block like for the other components,
             there will a block for every component inside each list item. This way you can connect these with functions individually.
           </p>
         </div>
