--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             You can position and resize the elements to make your app look unique. You can change some of
             the properties of the components as well, like the text on the button or the default text in the textboxes.
           </p>
-          <p><i>Note: You can click on the images in the tutorial to start the animation. Click again to stop them.</i></p>
+          <p><i>Note: You can click on any image in the tutorial to start the animation. Click again to stop it.</i></p>
           <img class="responsive-img wide z-depth-2" data-gifffer="img/editor/design.gif">
           <p>
             Now that we have all the components in place we can apply some logic to them.
