--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </p>
           <img class="responsive-img wide z-depth-2" data-gifffer="https://i.gyazo.com/0cf4716d49461a0746c041839bf3526a.gif">
           <p>
-            Now it's time to see our app in action after we've uploaded it to the server and downloaded it to our smartphone!
+            Now it's time to see our app in action after we've uploaded it to the server and downloaded it on our smartphone!
             Your app should do something like this:
           </p>
           <img class="responsive-img z-depth-2 result" data-gifffer="img/result.gif">
