--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <img class="responsive-img wide z-depth-2" data-gifffer="https://i.gyazo.com/4eb40535f280f7346379ef5422a92847.gif">
           <p>
             We can see it needs some inputs, an output and an action. The inputs are the textboxes, so we find both our
-            textboxes in the bar on the left and add them to the logic screen by clicking on them. Now we can connect
+            textboxes in the bar on the left under components and add them to the logic screen by clicking on them. Now we can connect
             the <b>text</b> output of the textboxes to the <b>left</b> and <b>right</b> inputs of the Plus block.
           </p>
           <img class="responsive-img wide z-depth-2" data-gifffer="https://i.gyazo.com/c17d26eda46cdfd4e338d5a051245998.gif">
