--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
           <h5>Logic</h5>
           <p>
             To go to the logic page, click on the logic tab in the header bar (see gif right under this text).
-            Now we start by looking through the functions on the left. Click on the <b>Plus</b> block and you will see
+            Now we start by looking through the functions on the left. Click on <b>Functions</b> to open the functions list. Then click on the <b>Plus</b> and you will see
             a logic block appear in the middle of the screen. This is the central logic block for our app.
           </p>
           <img class="responsive-img wide z-depth-2" data-gifffer="https://i.gyazo.com/4eb40535f280f7346379ef5422a92847.gif">
           <p>
             We can see it needs some inputs, an output and an action. The inputs are the textboxes, so we find both our
-            textboxes in the bar on the left under components and add them to the logic screen by clicking on them. Now we can connect
+            textboxes in the bar on the left under <b>Components</b> and add them to the logic screen by clicking on them. Now we can connect
             the <b>text</b> output of the textboxes to the <b>left</b> and <b>right</b> inputs of the Plus block.
           </p>
           <img class="responsive-img wide z-depth-2" data-gifffer="https://i.gyazo.com/c17d26eda46cdfd4e338d5a051245998.gif">
